--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,6 @@
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Impute = "f7bf1975-0170-51b9-8c5f-a992d46b9575"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
